@@ -1,7 +1,5 @@
 package no.soprasteria.felles.kontrakter.bomsystem.person;
 
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.Random;
 
@@ -9,7 +7,7 @@ public enum Kjønn {
     M,
     K;
 
-    private static final List<Kjønn> VALUES = Collections.unmodifiableList(Arrays.asList(values()));
+    private static final List<Kjønn> VALUES = List.of(values());
     private static final int SIZE = VALUES.size();
     private static final Random RANDOM = new Random();
 
